crates/pgt_tokenizer/src/snapshots/pgt_tokenizer__tests__lex_statement.snap
---
source: crates/pgt_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "select" @ Ident,
    " " @ Space,
    "1" @ Literal { kind: Int { base: Decimal, empty_int: false } },
    ";" @ Semi,
]
