crates/pgt_tokenizer/src/snapshots/pgt_tokenizer__tests__line_comment.snap
---
source: crates/pgt_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "-- foooooooooooo bar buzz" @ LineComment,
    "\n" @ LineEnding { count: 1 },
]
